# cf-template-rust

./: Makefile  README.md
Init/: .gitignore  Cargo.toml  README.md  cargo-generate.toml
Init/config/: quickstart.yml
Init/modules/hello-world/: Cargo.toml
Init/modules/hello-world/src/: module.rs
Modules/: cargo-generate.toml
Modules/api-db-handler/: .gitignore  Cargo.toml  README.md
Modules/api-db-handler/sdk/: Cargo.toml
Modules/api-db-handler/sdk/src/: client.rs  errors.rs  lib.rs  models.rs
Modules/api-db-handler/sdk/src/odata/: mod.rs  pokemon.rs
Modules/api-db-handler/src/: config.rs  errors.rs  lib.rs  module.rs
Modules/api-db-handler/src/api/rest/: dto.rs  error.rs
Modules/api-db-handler/src/api/rest/handlers/: mod.rs  pokemon.rs
Modules/api-db-handler/src/api/rest/routes/: mod.rs  pokemon.rs
Modules/api-db-handler/src/domain/: error.rs  mod.rs
Modules/api-db-handler/src/domain/local_client/: client.rs  mod.rs  streaming.rs
Modules/api-db-handler/src/domain/repos/: mod.rs  pokemon_repo.rs
Modules/api-db-handler/src/domain/service/: mod.rs  pokemon.rs
Modules/api-db-handler/src/infra/storage/: mapper.rs  mod.rs  odata_mapper.rs  pokemon_sea_repo.rs
Modules/api-db-handler/src/infra/storage/entity/: mod.rs  pokemon.rs
Modules/api-db-handler/src/infra/storage/migrations/: m20260111_000001_initial.rs  mod.rs
Modules/background-worker/: Cargo.toml  README.md  cargo-generate.toml
Modules/background-worker/.cargo-generate/: pre-script.rhai
Modules/background-worker/sdk/: Cargo.toml  README.md  cargo-generate.toml
Modules/background-worker/sdk/src/: client.rs  errors.rs  lib.rs  models.rs
Modules/background-worker/src/: lib.rs  module.rs
Modules/background-worker/src/domain/: error.rs  local_client.rs  mod.rs  ports.rs  service.rs
Modules/background-worker/src/infra/: dto.rs  mod.rs  model.rs
Modules/rest-gateway/: Cargo.toml  README.md
Modules/rest-gateway/src/: config.rs  lib.rs  module.rs  web.rs
Modules/rest-gateway/src/middleware/: mod.rs  request_id.rs
tests/: Cargo.toml  README.md
tests/src/: generation.rs  lib.rs  validation.rs
tests/tests/: integration.rs
