[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace]
members = ["modules/hello-world"]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "deny"
nursery = "deny"

[workspace.dependencies]
cf-modkit = { version = "0.2.14", default-features = false }

tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
