[package]
name = "{{module_name}}"
version.workspace = true
edition.workspace = true

[dependencies]
cf-modkit = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }

{% if module_type == "http-fetcher" %}anyhow = { workspace = true }
cf-modkit-http = { workspace = true }
cf-modkit-macros = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
{% endif %}
