[package]
name = "{{project-name}}"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
cf-modkit = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }

anyhow = { workspace = true }
cf-modkit-http = { workspace = true }
cf-modkit-macros = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
